# diffpool

./: README.md  diffpool.ipynb  pyproject.toml
dgl_layers/: assignment.py  diffpool.py  gnn.py  loss.py  model.py  pooling.py  utils.py
pytorch_geometric/: model.py
